--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -1,19 +1,17 @@
 
-
 /* Smaller than standard 1230(devices and browsers) */
 @media only screen and (max-width:1023px){
-  .container,.related-products .container {
-      max-width: 95%;
-  }
+  .container, .related-products .container {
+    max-width: 100%;
+    padding: 0 20px;
+}
     #product-single .summary.entry-summary {
       width: 50%;
-      float: left;
       padding-right: 15px;
       padding-left: 15px;
   }
   #product-single .product-thumb-main {
     width: 50%;
-    float: left;
     padding: 0 15px;
     max-width: inherit;
   }
@@ -32,4 +30,10 @@
   .related-products .section-related-product-carousel .slick-arrow.slick-next {
     right: 0;
   }
+  #product-single .product-thumb-main .pager-thumbnail-wrapper {
+    display: none;
+  }
+  #product-single .product-thumb-main .main-thumb-slide {
+    width: 100%;
+}
 }
