--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,5 @@
 
 @use "./vars";
-@use "./_rtl-typography.scss";
+@use "./_typography.scss";
 @use "./single-product.scss";
 @use "./responsive.scss";
-
-
-
-
-
-
