--- a/sass/_single-product.scss
+++ b/sass/_single-product.scss
@@ -1,32 +1,4 @@
 
-/*--------------------------------------------------------------
-# Content
---------------------------------------------------------------*/
-
-#content {
-    padding: 50px 0;
-}
-.container {
-    width: 1100px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    max-width: 100%;
-}
-.inner-wrapper {
-	margin-left: -15px;
-	margin-right: -15px;
-}
-.inner-wrapper:before,
-.inner-wrapper:after {
-	content: " ";
-	display: table
-}
-.section-title {
-    text-align: center;
-    margin-bottom: 25px;
-    font-size: 24px;
-}
 
 /*--------------------------------------------------------------
 # Woocommerce Single page 
@@ -208,12 +180,21 @@
         li {
             display: inline-block;
             list-style: outside none none;
+            span {
+                opacity: 0.5;
+            }
+         
             a,a:visited {
                 color: var(--wp--preset--color--foreground);
                 &:hover,:focus,:active {
                     color: var(--wp--preset--color--link-hover);
+                  span  {
+                    opacity: 1;
+                    }
+                   
                 }
             }
+           
             &.trail-item.trail-end::after {
                 display: none;
             }
@@ -231,7 +212,7 @@
 }
 
 /*--------------------------------------------------------------
- Single Product Page
+ - Single Product Page
 --------------------------------------------------------------*/
 
 #product-single {
