--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -42,7 +42,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Media
 	- Captions
 	- Galleries
-
 # Utilities
 	- Accessibility
 	- Alignments
@@ -931,4 +930,32 @@ clear-fix {
 	margin-right: auto;
 	margin-left: auto;
 	margin-bottom: 1.5em;
+}
+/*--------------------------------------------------------------
+# Content
+--------------------------------------------------------------*/
+
+#content {
+    padding: 50px 0;
+}
+.container {
+    width: 1100px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    max-width: 100%;
+}
+.inner-wrapper {
+	margin-left: -15px;
+	margin-right: -15px;
+}
+.inner-wrapper:before,
+.inner-wrapper:after {
+	content: " ";
+	display: table
+}
+.section-title {
+    text-align: center;
+    margin-bottom: 25px;
+    font-size: 24px;
 }
