--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Media
 	- Captions
 	- Galleries
-
 # Utilities
 	- Accessibility
 	- Alignments
@@ -1119,11 +1118,17 @@ clear-fix {
   display: inline-block;
   list-style: outside none none;
 }
+#breadcrumb ul li span {
+  opacity: 0.5;
+}
 #breadcrumb ul li a, #breadcrumb ul li a:visited {
   color: var(--wp--preset--color--foreground);
 }
 #breadcrumb ul li a:hover, #breadcrumb ul li a :focus, #breadcrumb ul li a :active, #breadcrumb ul li a:visited:hover, #breadcrumb ul li a:visited :focus, #breadcrumb ul li a:visited :active {
   color: var(--wp--preset--color--link-hover);
+}
+#breadcrumb ul li a:hover span, #breadcrumb ul li a :focus span, #breadcrumb ul li a :active span, #breadcrumb ul li a:visited:hover span, #breadcrumb ul li a:visited :focus span, #breadcrumb ul li a:visited :active span {
+  opacity: 1;
 }
 #breadcrumb ul li.trail-item.trail-end::after {
   display: none;
@@ -1138,7 +1143,7 @@ clear-fix {
 }
 
 /*--------------------------------------------------------------
- Single Product Page
+ - Single Product Page
 --------------------------------------------------------------*/
 #product-single .slick-list {
   padding: 0 !important;
@@ -1423,7 +1428,44 @@ Related Product
     max-width: inherit;
   }
 }
+@media only screen and (min-width: 768px) {
+  .desktop-hide {
+    display: none;
+  }
+  .mobile-hide {
+    display: block;
+  }
+}
 @media only screen and (max-width: 768px) {
+  .mobile-hide {
+    display: none;
+  }
+  .desktop-hide {
+    display: block;
+  }
+  #product-single .summary.entry-summary .product-title-wrapper {
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #C9C9C9;
+    border-radius: 50px 50px 0px 0px;
+    top: -43px;
+    position: relative;
+    z-index: 9;
+    /* max-width: 95%; */
+    margin: 0 auto;
+    padding: 20px;
+  }
+  #product-single .product-thumb-main a.woocommerce-product-gallery__trigger {
+    bottom: 60px;
+  }
+  .section-carousel-enabled .slick-dots {
+    text-align: center;
+    transition: all 1s ease-in-out 0s;
+    width: 100%;
+    z-index: 999;
+    position: absolute;
+    bottom: 8%;
+    margin: 0;
+  }
   #product-single .summary.entry-summary {
     width: 100%;
   }
