--- a/sass/_single-product.scss
+++ b/sass/_single-product.scss
@@ -19,40 +19,33 @@
         z-index: 999;
         position: absolute;
         bottom: -20px;
-        span {
-            background-color: #686868;
-            cursor: pointer;
-            display: inline-block;
-            float: none;
-            height: 15px;
-            margin: 5px 5px;
-            width: 15px;
-            z-index: 99;
-        }
         li{
             display: inline-block;
             line-height: 0;
             list-style: inherit;
             padding: 0;
             button {
-                border-radius: 100%;
-                height: 10px;
-                width: 10px;
-                padding: 0;
-                margin: 5px;
-                text-indent: 999px;
-                overflow: hidden;
-                background: #cccccb;
+                
+                    border-radius: 100%;
+                    height: 14px;
+                    width: 14px;
+                    padding: 0;
+                    margin: 5px;
+                    text-indent: 999px;
+                    overflow: hidden;
+                    background: #fff;
+              
             }
             &::before {
                 display: none;
             }
+            &.slick-active {
+                button {
+                    background-color: #727272;
+                }
+             }
         }
-        &.slick-active {
-            span {
-                background-color: var(--wp--preset--color--foreground);
-            }
-         }
+       
     }
 }
 .single-thumb img {
@@ -220,17 +213,17 @@
         padding: 0!important;
         z-index: 1;
     }
+    .single-thumb {
+        position: relative;
+        a {
+            display: block;
+        }
+    }
     .product-thumb-main {
         width: 55%;
         float: right;
         padding:0 15px;
-        max-width: 600px;
-        .single-thumb {
-            position: relative;
-            a {
-                display: block;
-            }
-        }
+        max-width: 600px; 
         a.wish-list {
             position: absolute;
             left: 20px;
@@ -289,6 +282,60 @@
         }
        } 
         .choose-color {
+            margin-bottom: 25px;
+            button.button-color {
+                padding: 0;
+                height: 25px;
+                width: 25px;
+                border: none;
+                border-radius: 100%;
+                margin: 0 0 0 20px;
+                background: var(--wp--preset--color--background);
+                position: relative;
+                &.pink-color  {
+                    background: #fde5fe;
+                }
+                &.orange-color {
+                    background: #f69a62;
+                }
+                &.blue-color  {
+                    background: #6a99c5;
+                }
+                &.green-color {
+                    background: #49a974;
+                }
+                &.active:before,
+                &:hover:before,
+                &:focus:before,
+                &:active:before {
+                    content: "";
+                    height: 33px;
+                    width: 33px;
+                    display: block;
+                    position: absolute;
+                    top: -4px;
+                    border: 1px solid var(--wp--preset--color--foreground);
+                    border-radius: 100%;
+                    right: -4px;
+                }
+                
+            
+               &:disabled[disabled]:after {
+                    content: "";
+                    height: 25px;
+                    width: 1px;
+                    background: var(--wp--preset--color--border);
+                    display: block;
+                    transform: rotate(45deg);
+                    position: absolute;
+                    left: 12px;
+                    top: 0;
+                }
+                &:disabled[disabled]:before {
+                    display:none;
+                }
+            }
+         
             ul {
                 display: flex;
                     gap: 20px;
