--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -3,6 +3,6 @@
     --wp--preset--color--foreground:#000;
     --wp--preset--color--border:#c9c9c9;
     --wp--preset--color--link-hover:#222;
-    --wp--preset--color--button-backgrond:#222;
+    --wp--preset--color--button-background-hover:#2a2a2a;
   
 }
