--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -29,8 +29,8 @@
   }
 }
 @media only screen and (max-width: 768px) {
-  .product-title-wrapper a.wish-list.desktop-hide {
-    float: left;
+  body {
+    font-size: 24px;
   }
   #page div {
     .mobile-hide {
@@ -40,24 +40,46 @@
       display: block;
     }
   }
-  #product-single > .container {
-    padding: 0;
-  }
-  #product-single > .container > .inner-wrapper {
-    margin: 0;
-  }
-  .related-product-carousel-wrapper {
-    overflow: hidden;
-    .slick-slide img {
-      display: block;
-      width: 100%;
+
+  #breadcrumb {
+    margin-bottom: 20px;
+    ul {
+      li {
+        &:before {
+          content: "\f715";
+          font-size: 11px;
+          margin: 0 -2px;
+          font-family: "FontAwesome";
+          font-weight: 900;
+          transform: rotate(70deg);
+          display: inline-block;
+          opacity: 0.5;
+          position: relative;
+          top: -2px;
+        }
+      }
     }
-    .inner-wrapper {
-      margin-left: -146px;
-    }
+  }
+  .product-title-wrapper a.wish-list.desktop-hide {
+    float: left;
+    font-size: 28px;
+    margin: 5px;
+  }
+  .faq-section .faq-item .faq-title h3 {
+    font-size: 26px;
+    font-weight: 500;
   }
 
   #product-single {
+    .share-on ul li a img,
+    .share-on ul li a i {
+      margin-right: 12px;
+      margin-top: 12px;
+    }
+    .faq-section .faq-item .faq-title:after {
+      top: 12px;
+      font-size: 28px;
+    }
     .single-cart.clear-fix {
       clear: both;
     }
@@ -69,6 +91,13 @@
       width: 100%;
       a.woocommerce-product-gallery__trigger {
         bottom: 60px;
+        width: 52px;
+        height: 52px;
+        vertical-align: middle;
+        padding: 4px 0;
+        i {
+          font-size: 18px;
+        }
       }
       .pager-thumbnail-wrapper {
         display: none;
@@ -81,6 +110,74 @@
     .summary.entry-summary {
       width: 100%;
       padding: 0 30px;
+      .fix-price {
+        font-weight: 500;
+        font-size: 32px;
+        display: inline-block;
+      }
+      .size-select .product-size li a {
+        padding: 8px;
+        min-width: 80px;
+        min-height: 60px;
+      }
+      .product-quantity {
+        span {
+          width: 60px;
+          height: 60px;
+          font-size: 26px;
+          &.minus {
+            font-size: 43px;
+          }
+        }
+        input[type="number"] {
+          border: none;
+          background: no-repeat;
+          padding-left: 0;
+          text-align: center;
+          font-size: 26px;
+        }
+      }
+
+      .faq-section .faq-item.acc_active .faq-title:after {
+        content: "-";
+        font-size: 37px;
+      }
+      button.add_to_cart_button {
+        width: 100%;
+        padding: 18px 30px;
+        font-size: 22px;
+        margin-bottom: 30px;
+      }
+      .color-picker h3,
+      .size-title-wrapper h3 {
+        font-size: 24px;
+        font-weight: 400;
+      }
+      .choose-color button.button-color {
+        height: 40px;
+        width: 40px;
+        &.active:before,
+        &:hover:before,
+        &:focus:before,
+        &:active:before {
+          content: "";
+          height: 48px;
+          width: 48px;
+          top: -4px;
+          right: -4px;
+        }
+        &:disabled[disabled]:after {
+          content: "";
+          height: 40px;
+          left: 19px;
+        }
+      }
+      .choose-color button .size-select .product-size li a {
+        padding: 19px;
+        min-width: 70px;
+        height: 64px;
+        font-size: 22px;
+      }
       button.add_to_cart_button {
         margin-bottom: 0;
       }
@@ -88,27 +185,63 @@
         background: var(--wp--preset--color--background);
         border: 1px solid var(--wp--preset--color--border);
         border-radius: 50px 50px 0px 0px;
-        top: -43px;
+        top: -40px;
         position: relative;
         z-index: 9;
         margin: 0 auto;
-        padding:20px 30px;
+        padding: 20px 30px;
         margin-left: -30px;
         margin-right: -30px;
+        margin-bottom: 10px;
       }
     }
     .section-carousel-enabled .slick-dots {
       text-align: center;
       transition: all 1s ease-in-out 0s;
-      width: 100%;
+      max-width: 70%;
       z-index: 999;
       position: absolute;
-      bottom: 8%;
+      bottom: 4%;
+      left: 15%;
+    }
+    .product-title {
+      font-size: 32px;
+    }
+    > .container {
+      padding: 0;
+    }
+    > .container > .inner-wrapper {
       margin: 0;
     }
   }
 
+  #breadcrumb ul li {
+    font-size: 22px;
+  }
+  .related-product-carousel-wrapper {
+    overflow: hidden;
+    .slick-slide img {
+      display: block;
+      width: 100%;
+    }
+    .inner-wrapper {
+      margin-left: -146px;
+    }
+  }
   .related-products {
+    .section-title {
+      font-size: 32px;
+    }
+    .product-item-detail h3,
+    .product-price-container {
+      font-size: 24px;
+    }
+    .product-thumb .pruduct-buttons a {
+      padding: 5px 3px;
+      height: 50px;
+      width: 50px;
+      font-size: 19px;
+    }
     .section-related-product-carousel {
       .slick-arrow.slick-prev {
         left: 0;
