--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --wp--preset--color--foreground:#000;
   --wp--preset--color--border:#c9c9c9;
   --wp--preset--color--link-hover:#222;
-  --wp--preset--color--button-backgrond:#222;
+  --wp--preset--color--button-background-hover:#2a2a2a;
 }
 
 /*!
@@ -15,10 +15,10 @@ Description:
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
-License: GNU General Public License v2 or later
+License: 
 License URI: LICENSE
 Text Domain: 
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+Tags: 
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
@@ -604,22 +604,13 @@ input[type=button], input[type=reset], input[type=submit], button {
   text-transform: uppercase;
   font-weight: 500;
 }
-
-input[type=button]:hover,
-input[type=reset]:hover,
-input[type=submit]:hover,
-button:hover,
-input[type=button]:focus,
-input[type=reset]:focus,
-input[type=submit]:focus,
-button:focus,
-input[type=button]:active,
-input[type=reset]:active,
-input[type=submit]:active,
-button:active {
-  background-color: var(--wp--preset--color--foreground);
+input[type=button]:hover, input[type=button]:focus, input[type=button]:active, input[type=reset]:hover, input[type=reset]:focus, input[type=reset]:active, input[type=submit]:hover, input[type=submit]:focus, input[type=submit]:active, button:hover, button:focus, button:active {
+  background-color: var(--wp--preset--color--button-background-hover);
   color: var(--wp--preset--color--background);
   outline: none;
+}
+input[type=button]:focus, input[type=reset]:focus, input[type=submit]:focus, button:focus {
+  outline: dotted thin;
 }
 
 input[type=text],
@@ -644,6 +635,25 @@ select {
   padding: 7px 10px 7px 15px;
   background: #f6f6f6;
 }
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=url]:focus,
+input[type=password]:focus,
+input[type=search]:focus,
+input[type=number]:focus,
+input[type=tel]:focus,
+input[type=range]:focus,
+input[type=date]:focus,
+input[type=month]:focus,
+input[type=week]:focus,
+input[type=time]:focus,
+input[type=datetime]:focus,
+input[type=datetime-local]:focus,
+input[type=color]:focus,
+textarea:focus,
+select:focus {
+  outline: dotted thin;
+}
 
 select {
   border: 1px solid var(--wp--preset--color--border);
@@ -664,25 +674,6 @@ select {
   height: auto;
 }
 
-input[type=text]:focus,
-input[type=email]:focus,
-input[type=url]:focus,
-input[type=password]:focus,
-input[type=search]:focus,
-input[type=number]:focus,
-input[type=tel]:focus,
-input[type=range]:focus,
-input[type=date]:focus,
-input[type=month]:focus,
-input[type=week]:focus,
-input[type=time]:focus,
-input[type=datetime]:focus,
-input[type=datetime-local]:focus,
-input[type=color]:focus,
-textarea:focus {
-  outline: none;
-}
-
 textarea {
   width: 100%;
 }
@@ -696,7 +687,7 @@ textarea {
   display: block;
 }
 
-clear-fix {
+.clear-fix {
   clear: both;
 }
 
@@ -930,7 +921,7 @@ button:disabled[disabled] {
 # Content
 --------------------------------------------------------------*/
 #content {
-  padding: 50px 0;
+  padding: 30px 0;
 }
 
 .container {
@@ -992,6 +983,9 @@ button:disabled[disabled] {
   overflow: hidden;
   background: #fff;
 }
+.section-carousel-enabled .slick-dots li button:active, .section-carousel-enabled .slick-dots li button:focus {
+  border: 1px thin dotted;
+}
 .section-carousel-enabled .slick-dots li::before {
   display: none;
 }
@@ -1014,22 +1008,16 @@ button:disabled[disabled] {
   top: 45%;
   z-index: 98;
   font-size: 17px;
-  padding: 16px 20px;
+  padding: 13px 20px;
   left: 0;
-  background-image: url(images/arrow-left.svg);
   height: 50px;
   width: 50px;
-  background-position: center;
-  background-size: 10px;
-  background-repeat: no-repeat;
+  background: no-repeat;
+  color: var(--wp--preset--color--foreground);
 }
 .section-carousel-enabled .slick-arrow.slick-next {
   left: inherit;
   right: 0;
-  background-image: url(images/arrow-right.svg);
-  background-position: center;
-  background-size: 10px;
-  background-repeat: no-repeat;
 }
 
 /*--------------------------------------------------------------
@@ -1043,20 +1031,16 @@ button:disabled[disabled] {
   cursor: pointer;
 }
 .slick-vertical .slick-arrow {
-  background-image: url(images/arrow-up.svg);
-  height: 22px;
-  width: 50px;
-  background-position: center center;
-  background-repeat: no-repeat;
   cursor: pointer;
   display: block;
-  margin: 3px auto;
-  background-size: 20px;
+  margin: 0px auto 3px;
+  padding: 0 10px;
+  background: none;
+  color: var(--wp--preset--color--foreground);
 }
 .slick-vertical .slick-arrow.slick-next {
   left: inherit;
   right: 0;
-  background-image: url(images/arrow-down.svg);
 }
 
 /*--------------------------------------------------------------
@@ -1116,13 +1100,24 @@ button:disabled[disabled] {
 #breadcrumb ul li span {
   opacity: 0.5;
 }
-#breadcrumb ul li a, #breadcrumb ul li a:visited {
+#breadcrumb ul li a,
+#breadcrumb ul li a:visited {
   color: var(--wp--preset--color--foreground);
 }
-#breadcrumb ul li a:hover, #breadcrumb ul li a :focus, #breadcrumb ul li a :active, #breadcrumb ul li a:visited:hover, #breadcrumb ul li a:visited :focus, #breadcrumb ul li a:visited :active {
+#breadcrumb ul li a:hover,
+#breadcrumb ul li a :focus,
+#breadcrumb ul li a :active,
+#breadcrumb ul li a:visited:hover,
+#breadcrumb ul li a:visited :focus,
+#breadcrumb ul li a:visited :active {
   color: var(--wp--preset--color--link-hover);
 }
-#breadcrumb ul li a:hover span, #breadcrumb ul li a :focus span, #breadcrumb ul li a :active span, #breadcrumb ul li a:visited:hover span, #breadcrumb ul li a:visited :focus span, #breadcrumb ul li a:visited :active span {
+#breadcrumb ul li a:hover span,
+#breadcrumb ul li a :focus span,
+#breadcrumb ul li a :active span,
+#breadcrumb ul li a:visited:hover span,
+#breadcrumb ul li a:visited :focus span,
+#breadcrumb ul li a:visited :active span {
   opacity: 1;
 }
 #breadcrumb ul li.trail-item.trail-end::after {
@@ -1132,9 +1127,16 @@ button:disabled[disabled] {
   display: none;
 }
 #breadcrumb ul li:before {
-  content: "/";
-  font-size: 11px;
-  margin: 0 5px;
+  content: "\f715";
+  font-size: 8px;
+  margin: 0;
+  font-family: "FontAwesome";
+  font-weight: 900;
+  transform: rotate(85deg);
+  display: inline-block;
+  opacity: 0.5;
+  position: relative;
+  top: -1px;
 }
 
 /*--------------------------------------------------------------
@@ -1162,7 +1164,15 @@ button:disabled[disabled] {
   top: 20px;
   background: var(--wp--preset--color--background);
   border-radius: 100%;
-  padding: 5px 4px;
+  padding: 6px 4px;
+  height: 34px;
+  width: 34px;
+  text-align: center;
+  font-size: 15px;
+}
+#product-single .product-thumb-main a.wish-list:hover, #product-single .product-thumb-main a.wish-list:focus, #product-single .product-thumb-main a.wish-list:active {
+  background: var(--wp--preset--color--foreground);
+  color: var(--wp--preset--color--background);
 }
 #product-single .product-thumb-main a.woocommerce-product-gallery__trigger {
   position: absolute;
@@ -1170,9 +1180,26 @@ button:disabled[disabled] {
   left: 20px;
   background: var(--wp--preset--color--background);
   border-radius: 100%;
-  padding: 8px 9px;
+  padding: 2px 2px;
   height: 34px;
   width: 34px;
+  text-align: center;
+  cursor: pointer;
+}
+#product-single .product-thumb-main a.woocommerce-product-gallery__trigger i {
+  text-align: center;
+  font-size: 15px;
+  color: transparent !important;
+  line-height: 2;
+  -webkit-text-stroke: 1px var(--wp--preset--color--foreground);
+  text-align: center;
+}
+#product-single .product-thumb-main a.woocommerce-product-gallery__trigger:hover, #product-single .product-thumb-main a.woocommerce-product-gallery__trigger:focus, #product-single .product-thumb-main a.woocommerce-product-gallery__trigger:active {
+  background: var(--wp--preset--color--foreground);
+  color: var(--wp--preset--color--background);
+}
+#product-single .product-thumb-main a.woocommerce-product-gallery__trigger:hover i, #product-single .product-thumb-main a.woocommerce-product-gallery__trigger:focus i, #product-single .product-thumb-main a.woocommerce-product-gallery__trigger:active i {
+  -webkit-text-stroke: 1px var(--wp--preset--color--background);
 }
 #product-single .product-thumb-main a.woocommerce-product-gallery__trigger img {
   display: inline;
@@ -1204,7 +1231,8 @@ button:disabled[disabled] {
 #product-single .summary.entry-summary .product-item-details .item-content {
   margin-bottom: 25px;
 }
-#product-single .summary.entry-summary .color-picker h3, #product-single .summary.entry-summary .size-title-wrapper h3 {
+#product-single .summary.entry-summary .color-picker h3,
+#product-single .summary.entry-summary .size-title-wrapper h3 {
   font-size: 14px;
   font-weight: 500;
 }
@@ -1301,12 +1329,17 @@ button:disabled[disabled] {
   justify-content: space-between;
   margin-bottom: 15px;
 }
-#product-single .summary.entry-summary .size-select .size-title-wrapper a, #product-single .summary.entry-summary .size-select .size-title-wrapper a:visited {
+#product-single .summary.entry-summary .size-select .size-title-wrapper a,
+#product-single .summary.entry-summary .size-select .size-title-wrapper a:visited {
   text-decoration: underline;
-  color: var(--wp--preset--color--foreground) 54;
-}
-#product-single .summary.entry-summary .size-select .size-title-wrapper a:hover, #product-single .summary.entry-summary .size-select .size-title-wrapper a:focus, #product-single .summary.entry-summary .size-select .size-title-wrapper a:active {
   color: var(--wp--preset--color--foreground);
+  opacity: 0.5;
+}
+#product-single .summary.entry-summary .size-select .size-title-wrapper a:hover,
+#product-single .summary.entry-summary .size-select .size-title-wrapper a:focus,
+#product-single .summary.entry-summary .size-select .size-title-wrapper a:active {
+  color: var(--wp--preset--color--foreground);
+  opacity: 1;
 }
 #product-single .summary.entry-summary .size-select .product-size {
   display: flex;
@@ -1335,7 +1368,7 @@ button:disabled[disabled] {
 #product-single .summary.entry-summary .product-quantity {
   margin-bottom: 30px;
   float: right;
-  border: 1px solid #DDD;
+  border: 1px solid #ddd;
   display: flex;
   justify-content: flex-start;
   flex-direction: row-reverse;
@@ -1352,6 +1385,12 @@ button:disabled[disabled] {
   cursor: pointer;
   align-items: center;
   justify-content: center;
+}
+#product-single .summary.entry-summary .product-quantity input[type=number] {
+  border: none;
+  background: no-repeat;
+  padding-left: 0;
+  text-align: left;
 }
 #product-single .summary.entry-summary .product-quantity input.input-text {
   width: 44px;
@@ -1393,6 +1432,13 @@ button:disabled[disabled] {
   vertical-align: middle;
   margin-top: 4px;
 }
+#product-single .share-on ul li a i {
+  margin-right: 10px;
+  float: left;
+  vertical-align: middle;
+  margin-top: 4px;
+  font-size: 18px;
+}
 
 /*--------------------------------------------------------------
 Related Product 
@@ -1413,13 +1459,19 @@ Related Product
   left: 20px;
 }
 .related-products .product-thumb .pruduct-buttons a {
-  background: rgba(255, 255, 255, 0.5019607843);
+  background: rgba(255, 255, 255, 0.8);
   border-radius: 100%;
   padding: 5px 3px;
   height: 34px;
   width: 34px;
   display: block;
   margin: 0 auto;
+  text-align: center;
+  font-size: 15px;
+}
+.related-products .product-thumb .pruduct-buttons a:hover, .related-products .product-thumb .pruduct-buttons a:focus, .related-products .product-thumb .pruduct-buttons a:active {
+  background: var(--wp--preset--color--foreground);
+  color: var(--wp--preset--color--background);
 }
 .related-products .product-thumb .pruduct-buttons a img {
   width: auto;
@@ -1483,8 +1535,8 @@ Related Product
   }
 }
 @media only screen and (max-width: 768px) {
-  .product-title-wrapper a.wish-list.desktop-hide {
-    float: left;
+  body {
+    font-size: 24px;
   }
   #page div .mobile-hide {
     display: none;
@@ -1492,21 +1544,38 @@ Related Product
   #page div .desktop-hide {
     display: block;
   }
-  #product-single > .container {
-    padding: 0;
+  #breadcrumb {
+    margin-bottom: 20px;
   }
-  #product-single > .container > .inner-wrapper {
-    margin: 0;
+  #breadcrumb ul li:before {
+    content: "\f715";
+    font-size: 11px;
+    margin: 0 -2px;
+    font-family: "FontAwesome";
+    font-weight: 900;
+    transform: rotate(70deg);
+    display: inline-block;
+    opacity: 0.5;
+    position: relative;
+    top: -2px;
   }
-  .related-product-carousel-wrapper {
-    overflow: hidden;
+  .product-title-wrapper a.wish-list.desktop-hide {
+    float: left;
+    font-size: 28px;
+    margin: 5px;
   }
-  .related-product-carousel-wrapper .slick-slide img {
-    display: block;
-    width: 100%;
+  .faq-section .faq-item .faq-title h3 {
+    font-size: 26px;
+    font-weight: 500;
   }
-  .related-product-carousel-wrapper .inner-wrapper {
-    margin-left: -146px;
+  #product-single .share-on ul li a img,
+  #product-single .share-on ul li a i {
+    margin-right: 12px;
+    margin-top: 12px;
+  }
+  #product-single .faq-section .faq-item .faq-title:after {
+    top: 12px;
+    font-size: 28px;
   }
   #product-single .single-cart.clear-fix {
     clear: both;
@@ -1519,6 +1588,13 @@ Related Product
   }
   #product-single .product-thumb-main a.woocommerce-product-gallery__trigger {
     bottom: 60px;
+    width: 52px;
+    height: 52px;
+    vertical-align: middle;
+    padding: 4px 0;
+  }
+  #product-single .product-thumb-main a.woocommerce-product-gallery__trigger i {
+    font-size: 18px;
   }
   #product-single .product-thumb-main .pager-thumbnail-wrapper {
     display: none;
@@ -1531,6 +1607,68 @@ Related Product
     width: 100%;
     padding: 0 30px;
   }
+  #product-single .summary.entry-summary .fix-price {
+    font-weight: 500;
+    font-size: 32px;
+    display: inline-block;
+  }
+  #product-single .summary.entry-summary .size-select .product-size li a {
+    padding: 8px;
+    min-width: 80px;
+    min-height: 60px;
+  }
+  #product-single .summary.entry-summary .product-quantity span {
+    width: 60px;
+    height: 60px;
+    font-size: 26px;
+  }
+  #product-single .summary.entry-summary .product-quantity span.minus {
+    font-size: 43px;
+  }
+  #product-single .summary.entry-summary .product-quantity input[type=number] {
+    border: none;
+    background: no-repeat;
+    padding-left: 0;
+    text-align: center;
+    font-size: 26px;
+  }
+  #product-single .summary.entry-summary .faq-section .faq-item.acc_active .faq-title:after {
+    content: "-";
+    font-size: 37px;
+  }
+  #product-single .summary.entry-summary button.add_to_cart_button {
+    width: 100%;
+    padding: 18px 30px;
+    font-size: 22px;
+    margin-bottom: 30px;
+  }
+  #product-single .summary.entry-summary .color-picker h3,
+  #product-single .summary.entry-summary .size-title-wrapper h3 {
+    font-size: 24px;
+    font-weight: 400;
+  }
+  #product-single .summary.entry-summary .choose-color button.button-color {
+    height: 40px;
+    width: 40px;
+  }
+  #product-single .summary.entry-summary .choose-color button.button-color.active:before, #product-single .summary.entry-summary .choose-color button.button-color:hover:before, #product-single .summary.entry-summary .choose-color button.button-color:focus:before, #product-single .summary.entry-summary .choose-color button.button-color:active:before {
+    content: "";
+    height: 48px;
+    width: 48px;
+    top: -4px;
+    right: -4px;
+  }
+  #product-single .summary.entry-summary .choose-color button.button-color:disabled[disabled]:after {
+    content: "";
+    height: 40px;
+    left: 19px;
+  }
+  #product-single .summary.entry-summary .choose-color button .size-select .product-size li a {
+    padding: 19px;
+    min-width: 70px;
+    height: 64px;
+    font-size: 22px;
+  }
   #product-single .summary.entry-summary button.add_to_cart_button {
     margin-bottom: 0;
   }
@@ -1538,22 +1676,58 @@ Related Product
     background: var(--wp--preset--color--background);
     border: 1px solid var(--wp--preset--color--border);
     border-radius: 50px 50px 0px 0px;
-    top: -43px;
+    top: -40px;
     position: relative;
     z-index: 9;
     margin: 0 auto;
     padding: 20px 30px;
     margin-left: -30px;
     margin-right: -30px;
+    margin-bottom: 10px;
   }
   #product-single .section-carousel-enabled .slick-dots {
     text-align: center;
     transition: all 1s ease-in-out 0s;
-    width: 100%;
+    max-width: 70%;
     z-index: 999;
     position: absolute;
-    bottom: 8%;
+    bottom: 4%;
+    left: 15%;
+  }
+  #product-single .product-title {
+    font-size: 32px;
+  }
+  #product-single > .container {
+    padding: 0;
+  }
+  #product-single > .container > .inner-wrapper {
     margin: 0;
+  }
+  #breadcrumb ul li {
+    font-size: 22px;
+  }
+  .related-product-carousel-wrapper {
+    overflow: hidden;
+  }
+  .related-product-carousel-wrapper .slick-slide img {
+    display: block;
+    width: 100%;
+  }
+  .related-product-carousel-wrapper .inner-wrapper {
+    margin-left: -146px;
+  }
+  .related-products .section-title {
+    font-size: 32px;
+  }
+  .related-products .product-item-detail h3,
+  .related-products .product-price-container {
+    font-size: 24px;
+  }
+  .related-products .product-thumb .pruduct-buttons a {
+    padding: 5px 3px;
+    height: 50px;
+    width: 50px;
+    font-size: 19px;
   }
   .related-products .section-related-product-carousel .slick-arrow.slick-prev {
     left: 0;
