--- a/sass/_single-product.scss
+++ b/sass/_single-product.scss
@@ -117,6 +117,9 @@
           margin: 0;
           font-size: 14px;
           font-weight: normal;
+          a {
+            display: block;
+          }
         }
         &:after {
           content: "+";
